--- a/app/views/main.html
+++ b/app/views/main.html
@@ -33,4 +33,10 @@
 
   <h4>Karma</h4>
   <p>Spectacular Test Runner for JavaScript.</p>
+
+  <p data-sr="wait 2.5s, east-in-out 100px">  TESTING SCROLL VIEW1</p>
+  <p data-sr="enter top">  TESTING SCROLL VIEW2</p>
+  <p data-sr="enter bottom, east-in-out 100px">  TESTING SCROLL VIEW3</p>
+  <p data-sr="move 100px">  TESTING SCROLL VIEW4</p> 
+
 </div>
