--- a/app/views/blog.html
+++ b/app/views/blog.html
@@ -1,60 +1,18 @@
-<div class = "blog" ng-controller="BlogCtrl">
-		<div class = "container">
-			<div class = "row">
-				<div class = "col-md-12" ng-repeat="blogContent in blogContents">
-					<div class = "jumbotron">
-						<div class = "row">
-							<div class = "col-md-12">
-								<div class="pull-left"><p align="left">{{ blogContent.date}}</p></div>
-							</div>
+<div class = "blog-contents" ng-controller="BlogCtrl">
+    <div ng-repeat="blogContent in blogContents">
+        <div class="blog-content">
+            <div class="blog-date">
+                {{blogContent.date}}
+            </div>
 
-							<div class = "col-md-12">
-								<div class="pull-left"><p align="left">{{ blogContent.title }}</P></div><br>
-							</div>
+            <div class="blog-title">
+                {{blogContent.title}}
+            </div>
 
-							<div class = "col-md-12">
-								<div class="pull-left"><p align="left">{{ blogContent.body}}</p></div>
-							</div>
-
-							<!-- comment section of the blog-->
-							<button class = "btn" ng-click = "showComments = !showComments">show comments</button>
-
-							<div class = "comments" ng-show="showComments">
-								<div class ="col-md-12">
-									<div class = "commentForm">
-										<form role = "form">
-											<div class = "col-md-12">
-												<div class = "form-group">
-													<label for="nameInput">Name: </label>
-													<input class = "form-control" ng-model="nameInput" id - "nameInput">
-												</input>
-											</div>
-											</div>
-											<div class = "col-md-12">
-												<div class = "form-group">
-													<label for="commentInput">Comment</label>
-													<textarea rows="3" class="form-control" ng-model="commentInput" id="commentInput" placeholder="comment here"> Comment</textarea>
-												</div>
-											</div>
-											<button class="btn" ng-click="addComment(blogContent.id, nameInput, commentInput)">
-												<span class="glyphicon glyphicon-comment"></span> Comment
-											</button>
-									    </form>
-									</div>
-
-									<div ng-repeat = "comment in comments[blogContent.id]|orderBy:'-id'">
-										<div class = "row">
-											<div class = "col-xs-12">
-												<div class = "col-xs-12"><p>{{ comment.name }}</p></div>
-												<div class = "col-xs-12"><p>{{ comment.comment }}</p></div>
-											</div>
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
+            <div class="blog-body">
+                {{blogContent.body}}
+            </div>
+        </div>
+    </div>
 </div>
+
