--- a/app/views/about.html
+++ b/app/views/about.html
@@ -1,11 +1,6 @@
-<p>
-	-Insert motivational message for cooking here-
-</p> 
-
-<p>
-	A little bit about myself. I'm a student at the University of Waterloo who enjoys cooking when I got the time. If you see me on campus say hi =) 
-</p>
-
-<P id="name">
-	Alex 
-</p>
+ <div class="blog-about">
+  <p>Can't think of a good introduction right off the bat, gotta make it sound coo and stuff ..</p>
+  <p>For now this is just a place where I will blab about random cooking things I counter day to day</p>
+  <p>By the way I go to Waterloo so if you see me on campus or something, say hi!</p>
+  <p style="text-align:center"> Alex </p>
+</div>
