--- a/app/styles/placeholder.css
+++ b/app/styles/placeholder.css
@@ -1,18 +1,86 @@
 .blog-content {
-  height: 500px; }
+  padding-bottom: 40px; }
+  .blog-content .blog-title {
+    text-align: center;
+    font-family: Handlee;
+    font-size: 32px; }
+  .blog-content .blog-date {
+    text-align: center;
+    font-family: 'Poiret One'; }
+  .blog-content .blog-body {
+    font-family: 'open sans';
+    font-size: 13pt;
+    color: #666;
+    line-height: 30px; }
 
 .blog-contents {
-  background-color: lightBlue;
-  margin-left: 10%;
-  margin-right: 10%; }
+  margin-left: 25%;
+  margin-right: 25%; }
 
+.blog-about {
+  margin-left: 25%;
+  margin-right: 25%; }
+  .blog-about h4 {
+    font-family: "Qwigley";
+    font-size: 20pt; }
+  .blog-about p {
+    font-family: 'Open Sans';
+    font-size: 13pt;
+    color: #555; }
+
+/* latin-ext */
+@font-face {
+  font-family: 'Qwigley';
+  font-style: normal;
+  font-weight: 400;
+  src: local("Qwigley"), local("Qwigley-Regular"), url(http://fonts.gstatic.com/s/qwigley/v6/_sQT3XXAiWOQWEZ6ruLKU1KPGs1ZzpMvnHX-7fPOuAc.woff2) format("woff2");
+  unicode-range: U+0100-024F, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF; }
+/* latin */
+@font-face {
+  font-family: 'Qwigley';
+  font-style: normal;
+  font-weight: 400;
+  src: local("Qwigley"), local("Qwigley-Regular"), url(http://fonts.gstatic.com/s/qwigley/v6/K9QriY-uFU8lyAnX5hTTtgLUuEpTyoUstqEm5AMlJo4.woff2) format("woff2");
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000; }
+/* cyrillic */
+@font-face {
+  font-family: 'Poiret One';
+  font-style: normal;
+  font-weight: 400;
+  src: local("Poiret One"), local("PoiretOne-Regular"), url(http://fonts.gstatic.com/s/poiretone/v4/cKr_e199f0xMkxMkRbEJXwsYbbCjybiHxArTLjt7FRU.woff2) format("woff2");
+  unicode-range: U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116; }
+/* latin-ext */
+@font-face {
+  font-family: 'Poiret One';
+  font-style: normal;
+  font-weight: 400;
+  src: local("Poiret One"), local("PoiretOne-Regular"), url(http://fonts.gstatic.com/s/poiretone/v4/3Annd_XP-99FcGbOpm6fVAsYbbCjybiHxArTLjt7FRU.woff2) format("woff2");
+  unicode-range: U+0100-024F, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF; }
+/* latin */
+@font-face {
+  font-family: 'Poiret One';
+  font-style: normal;
+  font-weight: 400;
+  src: local("Poiret One"), local("PoiretOne-Regular"), url(http://fonts.gstatic.com/s/poiretone/v4/HrI4ZJpJ3Fh0wa5ofYMK8QzyDMXhdD8sAj6OAJTFsBI.woff2) format("woff2");
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000; }
+/* latin */
+@font-face {
+  font-family: 'Handlee';
+  font-style: normal;
+  font-weight: 400;
+  src: local("Handlee Regular"), local("Handlee-Regular"), url(http://fonts.gstatic.com/s/handlee/v5/juOaTHBX9N7mCQYS68pw6QLUuEpTyoUstqEm5AMlJo4.woff2) format("woff2");
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000; }
 .blog-wrapper {
   min-height: 100%;
   position: relative; }
+  .blog-wrapper .blog-header .navbar-fixed-top {
+    margin-left: 25%;
+    margin-right: 25%;
+    margin-bottom: 0px; }
   .blog-wrapper .blog-main {
-    background-color: yellow;
+    padding-top: 50px;
     padding-bottom: 50px;
-    height: 90%;
+    height: 100%;
     position: absolute;
     overflow: scroll;
     width: 100%; }
@@ -22,7 +90,7 @@
     padding-top: 19px;
     color: #777;
     height: 50px;
-    position: absolute;
-    bottom: 0px; }
+    bottom: 0px;
+    position: absolute; }
 
 /*# sourceMappingURL=placeholder.css.map */
