--- a/app/styles/placeholder.scss
+++ b/app/styles/placeholder.scss
@@ -1,17 +1,25 @@
 @import "blog-contents";
+@import "blog-about";
+@import "web-fonts";
+
+$content-margin: 10;
 
 .blog-wrapper{
   min-height: 100%;
   position: relative;
 
   .blog-header{
-
+    .navbar-fixed-top{
+      margin-left: 25%;
+      margin-right: 25%;
+      margin-bottom: 0px;
+    }
   }
 
   .blog-main{
-    background-color: yellow;
+    padding-top: 50px;
     padding-bottom: 50px;
-    height: 90%;
+    height: 100%;
     position: absolute;
     overflow: scroll;
     width: 100%;
@@ -23,8 +31,8 @@
     padding-top: 19px;
     color: #777;
     height: 50px;
-    position: absolute;
     bottom: 0px;
+    position: absolute;
   }
 
 }
