change about section

--- a/app/views/blog.html
+++ b/app/views/blog.html
@@ -7,7 +7,7 @@
             </div>
 
             <div class="blog-date">
-                {{blogContent.date}}
+                {{blogContent.created_on}}
             </div>
 
             <div class="blog-body">
