--- a/app/styles/_blog-about.scss
+++ b/app/styles/_blog-about.scss
@@ -1,6 +1,10 @@
 .blog-about{
-    margin-left: 25%;
-    margin-right: 25%;
+    background-color: #999966;
+    padding-left: 25%;
+    padding-right: 25%;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
 
     h4{
         font-family: "Qwigley";
@@ -10,6 +14,6 @@
     p{
         font-family: 'Open Sans';
         font-size: 13pt;
-        color: #555;
+        color: #f5f5f0;
     }
 }
