--- a/app/styles/placeholder.css
+++ b/app/styles/placeholder.css
@@ -18,15 +18,19 @@
   margin-right: 25%; }
 
 .blog-about {
-  margin-left: 25%;
-  margin-right: 25%; }
+  background-color: #999966;
+  padding-left: 25%;
+  padding-right: 25%;
+  position: absolute;
+  bottom: 0;
+  width: 100%; }
   .blog-about h4 {
     font-family: "Qwigley";
     font-size: 20pt; }
   .blog-about p {
     font-family: 'Open Sans';
     font-size: 13pt;
-    color: #555; }
+    color: #f5f5f0; }
 
 /* latin-ext */
 @font-face {
@@ -79,7 +83,6 @@
     margin-bottom: 0px; }
   .blog-wrapper .blog-main {
     padding-top: 50px;
-    padding-bottom: 50px;
     height: 100%;
     position: absolute;
     overflow: scroll;
