--- a/app/styles/placeholder.scss
+++ b/app/styles/placeholder.scss
@@ -18,7 +18,7 @@ $content-margin: 10;
 
   .blog-main{
     padding-top: 50px;
-    padding-bottom: 50px;
+    // padding-bottom: 50px;
     height: 100%;
     position: absolute;
     overflow: scroll;
