--- a/app/views/blog.html
+++ b/app/views/blog.html
@@ -10,9 +10,17 @@
                 {{blogContent.created_on}}
             </div>
 
-            <div class="blog-body">
+            <div class="blog-body" ng-bind-html="blogContent.body">
                 {{blogContent.body}}
             </div>
         </div>
     </div>
+</div>
+
+<div class="blog-about" id="About">
+          <h4>About me</h4>
+          <p>Can't think of a good introduction for now, gotta make it sound cool and stuff ..</p>
+          <p>For now this is just a place where I will blab about random cooking things I counter day to day</p>
+          <p>By the way I go to Waterloo so if you see me on campus or something, say hi!</p>
+          <p> Alex </p>
 </div>
