--- a/app/styles/_blog-about.scss
+++ b/app/styles/_blog-about.scss
@@ -2,13 +2,13 @@
     background-color: #999966;
     padding-left: 25%;
     padding-right: 25%;
-    position: absolute;
-    bottom: 0;
     width: 100%;
+    height: 250px;
 
     h4{
         font-family: "Qwigley";
         font-size: 20pt;
+        padding-top: 20px;
     }
 
     p{
