--- a/app/styles/placeholder.css
+++ b/app/styles/placeholder.css
@@ -90,8 +90,28 @@
     margin-left: 25%;
     margin-right: 25%;
     margin-bottom: 0px; }
-  .blog-wrapper .blog-header .navbar .nav ul li a {
-    color: red; }
+  .blog-wrapper .blog-header .navbar-default .navbar-nav li a {
+    position: relative;
+    text-decoration: none; }
+  .blog-wrapper .blog-header .navbar-default .navbar-nav li a:hover {
+    color: grey; }
+  .blog-wrapper .blog-header .navbar-default .navbar-nav li a:before {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    bottom: 0;
+    left: 0;
+    background-color: #000;
+    visibility: hidden;
+    -webkit-transform: scaleX(0);
+    transform: scaleX(0);
+    -webkit-transition: all 0.3s ease-in-out 0s;
+    transition: all 0.3s ease-in-out 0s; }
+  .blog-wrapper .blog-header .navbar-default .navbar-nav li a:hover:before {
+    visibility: visible;
+    -webkit-transform: scaleX(1);
+    transform: scaleX(1); }
   .blog-wrapper .blog-main {
     padding-top: 50px;
     height: 100%;
