--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -8,12 +8,7 @@
 html, body {
   padding: 0;
   position: relative;
-  height: 100%;
-}
-
-.wrapper{
-  min-height: 100%;
-  position: relative;
+  height: 1000px;
 }
 
 /* Everything but the jumbotron gets side spacing for mobile first views */
