--- a/app/styles/placeholder.scss
+++ b/app/styles/placeholder.scss
@@ -15,6 +15,29 @@ $content-margin: 10;
       margin-right: 25%;
       margin-bottom: 0px;
     }
+
+    .navbar-fixed-top.scrollednavbar{
+      margin-left: 0%;
+      margin-right: 0%;
+      background-color: #c0ff80;
+      border-top: 4px solid #b3ff66;
+      border-bottom: 4px solid #b3ff66;
+      .navbar-brand{
+        margin-left: 25%;
+        position: absolute;
+        color: white;
+      }
+      .navbar-nav{
+        margin-left: 60%;
+        li{
+          a{
+            color: white;
+          }
+        }
+      }
+    }
+
+
     .navbar-default{
       .navbar-nav{
         li{
