--- a/app/styles/_blog-about.scss
+++ b/app/styles/_blog-about.scss
@@ -1,13 +1,12 @@
 .blog-about{
     background-color: #999966;
-    padding-left: 25%;
-    padding-right: 25%;
+    padding-left: 10%;
+    padding-right: 10%;
     width: 100%;
-    height: 250px;
 
     h4{
         font-family: "Qwigley";
-        font-size: 20pt;
+        font-size: 30pt;
         padding-top: 20px;
     }
 
@@ -15,5 +14,29 @@
         font-family: 'Open Sans';
         font-size: 13pt;
         color: #f5f5f0;
+    }
+
+    .about-content{
+        position: relative;
+        top: 10%;
+    }
+
+    .about-text{
+        position: relative;
+        float: right;
+    }
+
+    .profile-pic-col{
+        height: 100%;
+        position: absolute;
+    }
+
+    .profile-pic{
+        width: 200px;
+        height: 200px;
+        border-radius: 50%;
+        position: absolute;
+        bottom: 0px;
+        right: 20%;
     }
 }
