--- a/app/styles/placeholder.css
+++ b/app/styles/placeholder.css
@@ -21,18 +21,33 @@
 
 .blog-about {
   background-color: #999966;
-  padding-left: 25%;
-  padding-right: 25%;
-  width: 100%;
-  height: 250px; }
+  padding-left: 10%;
+  padding-right: 10%;
+  width: 100%; }
   .blog-about h4 {
     font-family: "Qwigley";
-    font-size: 20pt;
+    font-size: 30pt;
     padding-top: 20px; }
   .blog-about p {
     font-family: 'Open Sans';
     font-size: 13pt;
     color: #f5f5f0; }
+  .blog-about .about-content {
+    position: relative;
+    top: 10%; }
+  .blog-about .about-text {
+    position: relative;
+    float: right; }
+  .blog-about .profile-pic-col {
+    height: 100%;
+    position: absolute; }
+  .blog-about .profile-pic {
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+    position: absolute;
+    bottom: 0px;
+    right: 20%; }
 
 .blog-admin {
   margin-left: 10%;
@@ -91,19 +106,7 @@
     margin-right: 25%;
     margin-bottom: 0px; }
   .blog-wrapper .blog-header .navbar-fixed-top.scrollednavbar {
-    margin-left: 0%;
-    margin-right: 0%;
-    background-color: #c0ff80;
-    border-top: 4px solid #b3ff66;
-    border-bottom: 4px solid #b3ff66; }
-    .blog-wrapper .blog-header .navbar-fixed-top.scrollednavbar .navbar-brand {
-      margin-left: 25%;
-      position: absolute;
-      color: white; }
-    .blog-wrapper .blog-header .navbar-fixed-top.scrollednavbar .navbar-nav {
-      margin-left: 60%; }
-      .blog-wrapper .blog-header .navbar-fixed-top.scrollednavbar .navbar-nav li a {
-        color: white; }
+    background-color: black; }
   .blog-wrapper .blog-header .navbar-default .navbar-nav li a {
     position: relative;
     text-decoration: none; }
@@ -132,13 +135,5 @@
     position: absolute;
     overflow: scroll;
     width: 100%; }
-  .blog-wrapper .blog-footer {
-    width: 100%;
-    text-align: center;
-    padding-top: 19px;
-    color: #777;
-    height: 50px;
-    bottom: 0px;
-    position: absolute; }
 
 /*# sourceMappingURL=placeholder.css.map */
