--- a/app/views/blog.html
+++ b/app/views/blog.html
@@ -1,7 +1,6 @@
-<div class = "blog-contents" ng-controller="BlogCtrl">
+<div class = "blog-contents" ng-controller="BlogCtrl" scrollnav  ng-class="{'scrollednavbar':boolChangeClass}">
     <div ng-repeat="blogContent in blogContents | orderBy: '-unixDate'">
         <div class="blog-content">
-
             <div class="blog-title">
                 {{blogContent.title}}
             </div>
@@ -13,14 +12,21 @@
             <div class="blog-body" ng-bind-html="blogContent.body">
                 {{blogContent.body}}
             </div>
-        </div>
+          </div>
     </div>
 </div>
 
-<div class="blog-about" id="About">
+<div class="blog-about" windowsize ng-style="{height: w_height}">
+  <div class="row row-eq-height about-content">
+    <div class="col-md-4 profile-pic-col">
+      <img class="profile-pic" src="https://s3-us-west-2.amazonaws.com/trailandcook-images/profile.jpg">
+    </div>
+    <div class="col-md-8 about-text">
           <h4>About me</h4>
-          <p>Can't think of a good introduction for now, gotta make it sound cool and stuff ..</p>
-          <p>For now this is just a place where I will blab about random cooking things I counter day to day</p>
-          <p>By the way I go to Waterloo so if you see me on campus or something, say hi!</p>
+          <p> For now this is just a place where I will blab about random cooking things I counter day to day and a place where I will explore the philosophy of cooking, in the hopes of discovering new recipes and techniques</p>
+          <p>I go to UWaterloo so if you see me on campus or something, say hi!</p>
           <p> Alex </p>
+          <p>By the way, two recipe books on average are published in Franch each day. </p>
+    </div>
+  </div>
 </div>
