add change navbar color on scroll

--- a/app/styles/_blog-contents.scss
+++ b/app/styles/_blog-contents.scss
@@ -1,8 +1,7 @@
 @import "blog-content";
 
 .blog-contents{
-    margin-left: 25%;
-    margin-right: 25%;
+    background-color: white;
     padding-bottom: 10px;
     padding-top: 10px;
 }
