--- a/app/views/blog.html
+++ b/app/views/blog.html
@@ -16,7 +16,7 @@
     </div>
 </div>
 
-<div class="blog-about" windowsize ng-style="{height: w_height}">
+<div class="blog-about" windowsize ng-style="{height: w_height/2}">
   <div class="row row-eq-height about-content">
     <div class="col-md-4 profile-pic-col">
       <img class="profile-pic" src="https://s3-us-west-2.amazonaws.com/trailandcook-images/profile.jpg">
