--- a/app/styles/_blog-content.scss
+++ b/app/styles/_blog-content.scss
@@ -7,6 +7,8 @@ $blog-body-color: #669999;
 // }
 
 .blog-content{
+    margin-left: 25%;
+    margin-right: 25%;
     padding-bottom: $interblog-space;
 
     .blog-title{
