--- a/app/styles/placeholder.scss
+++ b/app/styles/placeholder.scss
@@ -1,35 +1,65 @@
 @import "blog-contents";
 @import "blog-about";
 @import "blog-admin";
+@import "blog-top";
 @import "web-fonts";
+
 
 $content-margin: 10;
 
 .blog-wrapper{
-  min-height: 100%;
+  height: 100%;
   position: relative;
 
   .blog-header{
     .navbar-fixed-top{
-      margin-left: 25%;
-      margin-right: 25%;
       margin-bottom: 0px;
     }
 
-    .navbar-fixed-top.scrollednavbar{
-      background-color: black;
-    }
-
-
-    .navbar-default{
+    .navbar-default.atblog{
+      background: white;
+      .navbar-brand{
+        color: grey;
+      }
       .navbar-nav{
         li{
           a{
-            position: relative;
-            text-decoration: none;
+            color: grey;
           }
           a:hover{
             color: grey;
+          }
+        }
+      }
+    }
+
+    .navbar-default{
+      padding-top: 10px;
+      background-color: transparent;
+      background: transparent;
+      border-color: transparent;
+
+      .navbar-brand{
+        left: 25%;
+        position: absolute;
+        color: white;
+        padding-left: 0;
+        font-family: 'Qwigley', cursive;
+        font-size: 50px;
+      }
+
+      .navbar-nav{
+        margin-right: 25%;
+        li{
+          a{
+            font-family: 'Poiret One', cursive;
+            font-size: 20px;
+            position: relative;
+            text-decoration: none;
+            color: white;
+          }
+          a:hover{
+            color: white;
           }
           a:before {
             content: "";
@@ -38,7 +68,7 @@ $content-margin: 10;
             height: 2px;
             bottom: 0;
             left: 0;
-            background-color: #000;
+            background-color: white;
             visibility: hidden;
             -webkit-transform: scaleX(0);
             transform: scaleX(0);
@@ -56,11 +86,8 @@ $content-margin: 10;
   }
 
   .blog-main{
-    padding-top: 50px;
-    // padding-bottom: 50px;
-    height: 100%;
+    min-height: 100%;
     position: absolute;
-    overflow: scroll;
     width: 100%;
   }
 
