--- a/app/styles/_blog-content.scss
+++ b/app/styles/_blog-content.scss
@@ -28,5 +28,9 @@ $blog-body-color: #669999;
         color: $blog-body-color;
         line-height: 20px;
     }
+
+    .comment-box{
+        min-height: 50px;
+    }
 }
 
