--- a/app/styles/placeholder.css
+++ b/app/styles/placeholder.css
@@ -14,6 +14,8 @@
     font-size: 13pt;
     color: #669999;
     line-height: 20px; }
+  .blog-content .comment-box {
+    min-height: 50px; }
 
 .blog-contents {
   background-color: white;
