--- a/app/views/blog.html
+++ b/app/views/blog.html
@@ -14,21 +14,23 @@
             </div>
 
             <uib-accordion>
-              <uib-accordion-group heading="comments" is-open="commentsOpen" ng-click="changeCommentStatus(blogComment.id)">
+              <uib-accordion-group heading="comments" is-open="commentsOpen" ng-click="changeCommentStatus($index, blogContent.blog_id)">
+
+                <div ng-show="currentBlogComments.length == 0">
+                    <p class="comment-box">no comments to show</p>
+                </div>
+                
                 <form role="form">
                     <div class="form-group">
                       <textarea class="form-control" placeholder="write a comment" rows="2" ng-model="currentComment"></textarea>
                     </div>
                     <div class="form-group">
-                      <button class="btn btn-block btn-success" ng-click="postComment(currentComment)">Post</button>
+                      <button class="btn btn-block btn-success" ng-click="postComment({blog_id: blogContent.id, comment: currentComment})">Post</button>
                     </div>
                   </form>
                 <div ng-repeat="comments in currentBlogComments" ng-show="currentBlogComments.length !== 0">
                   <div>
                   </div>
-                </div>
-                <div ng-show="currentBlogComments === 0">
-                  no comments to show
                 </div>
               </uib-accordion-group>
             </uib-accordion>
