--- a/app/styles/placeholder.scss
+++ b/app/styles/placeholder.scss
@@ -10,6 +10,7 @@ $content-margin: 10;
 .blog-wrapper{
   height: 100%;
   position: relative;
+  width: 100%;
 
   .blog-header{
     .navbar-fixed-top{
