--- a/app/styles/_blog-about.scss
+++ b/app/styles/_blog-about.scss
@@ -17,8 +17,22 @@
     }
 
     .about-content{
-        position: relative;
-        top: 10%;
+        display: flex;
+        align-items: center;
+        display: -webkit-box;
+        display: -moz-box;
+        display: -ms-flexbox;
+        display: -webkit-flex;
+        -webkit-flex-flow: row wrap;
+        justify-content: space-around;
+
+        
+        @media all and (max-width: 500px) {
+            .profile-pic-col{
+                padding-top: 10%;
+                padding-bottom: 10%;
+            }
+        }
     }
 
     .about-text{
@@ -26,17 +40,15 @@
         float: right;
     }
 
-    .profile-pic-col{
-        height: 100%;
-        position: absolute;
-    }
-
     .profile-pic{
         width: 200px;
         height: 200px;
         border-radius: 50%;
-        position: absolute;
-        bottom: 0px;
-        right: 20%;
+    }
+
+    .social{
+        position: relative;
+        bottom: 0;
+        background-color: red;
     }
 }
