--- a/app/styles/placeholder.css
+++ b/app/styles/placeholder.css
@@ -18,6 +18,12 @@
     font-size: 13pt;
     color: #669999;
     line-height: 20px; }
+    .blog-content .blog-body img {
+      -webkit-transition: all 0.7s ease;
+      transition: all 0.7s ease; }
+    .blog-content .blog-body img:hover {
+      opacity: 0.8;
+      filter: alpha(opacity=80); }
   .blog-content .comment-commenter-name {
     color: green;
     font-family: 'sans-serif';
@@ -208,6 +214,12 @@
         visibility: visible;
         -webkit-transform: scaleX(1);
         transform: scaleX(1); }
+  .blog-wrapper .blog-top img {
+    -webkit-transition: all 0.7s ease;
+    transition: all 0.7s ease; }
+  .blog-wrapper .blog-top img:hover {
+    opacity: 0.8;
+    filter: alpha(opacity=80); }
   .blog-wrapper .blog-main {
     min-height: 100%;
     position: absolute;
