--- a/app/styles/placeholder.scss
+++ b/app/styles/placeholder.scss
@@ -86,6 +86,18 @@ $content-margin: 10;
     }
   }
 
+  .blog-top{
+    img {
+      -webkit-transition: all 0.7s ease;
+      transition: all 0.7s ease;
+    }
+
+    img:hover {
+         opacity:0.8;
+            filter: alpha(opacity=80);
+    }
+  }
+
   .blog-main{
     min-height: 100%;
     position: absolute;
